...
    <string name="tx_filter_help_title">Help on editing filters</string>
    <string name="tx_actions_help_title">Help on chosing actions</string>
    <string name="tx_main_help_title">Help on PrismaCallBlocker</string>
    <string name="tx_description">Description</string>
    <string name="bt_manage_patterns">Manage Patterns</string>
    <string name="tx_patterns_in_rule">Patterns in rule:\n</string>
    <string name="mn_add_pattern">Add a pattern</string>
    <string name="mn_delete_pattern">Delete selected patterns</string>
    <string name="mn_update_patterns">Update patterns</string>
    <string name="mn_pick_log">Pick from log</string>
    <string name="mn_edit_pattern">Edit a single pattern</string>
    <string name="tx_manage_patterns_help">Manage filter patterns</string>
    <string name="tx_calendar_rule_title">Calendar Rule</string>
    <string name="tx_filter_rule_title">Filter Rule</string>
    <string name="tx_action_name_title">Action</string>
    <string name="mn_pick_calendar">Pick a calendar rule</string>
    <string name="mn_pick_patterns">Pick a filter rule</string>
...
