...
        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/bt_manage_patterns"
            android:textAllCaps="false"
            android:layout_weight="1"
            android:id ="@+id/bt_filter_rule_patterns"
            android:onClick="onManagePatterns" />
    </LinearLayout>

    <TextView
        android:id ="@+id/tx_rule_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:background="@drawable/rounded_corner_yellow"
        android:text="@string/tx_patterns_in_rule"
        android:layout_marginTop="10dp"
...
